--- a/inflearn/spring_mvc/mvc/servlet/src/main/resources/application.properties
+++ b/inflearn/spring_mvc/mvc/servlet/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name=servlet
 
 # ??? ?? 3.2?? `debug` ??? `trace` ? ???? ?? ??
 logging.level.org.apache.coyote.http11=trace
+
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
